# open_ai_wrapper

./: LICENSE  pyproject.toml
openai_wrapper/: chat.py  utils.py
tests/: test_chat.py  test_complete.py
